--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ex-react-router-and-hooks",
+  "name": "ex-react-and-hooks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "history": "^5.3.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
